--- a/style.css
+++ b/style.css
@@ -2,42 +2,46 @@
   margin: 0;
   padding: 0;
   color: white;
+  font-size: 5vw;
 }
 
 body {
-  height: 100vh;
-  width: 100vh;
+  max-height: 100vh;
+  max-width: 100vw;
   background-color: #272727;
 }
 
-main {
-  height: 100vh;
-  width: 100vh;
-}
-
 .numpad-grid {
-  position: center;
-  width: 50px;
-  height: 50px;
+  position: absolute;
+  bottom: 0;
+  margin: 7vw;
+  justify-items: center;
+  align-items: center;
+  width: auto;
+  height: 45vh;
   display: grid;
+  gap: 2vw;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   grid-row: 1/6;
   grid-column: 1/5;
-  gap: 0.5rem;
   background-color: #272727;
 }
 
+.numpad .numpad__button-brackets {
+  width: 20vw;
+  height: 20vw;
+}
 .numpad .numpad__button-brackets > * {
-  width: 1rem;
-  height: 2.5rem;
+  width: 7vw;
+  height: 20vw;
   align-items: center;
-  margin: 0 0.05rem 0 0.05rem;
+  margin: 0 1vw 0 1vw;
   background-color: #4A83C8;
 }
 .numpad .numpad__button {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 20vw;
+  height: 20vw;
 }
 .numpad .numpad__button--0, .numpad .numpad__button--1, .numpad .numpad__button--2, .numpad .numpad__button--3, .numpad .numpad__button--4, .numpad .numpad__button--5, .numpad .numpad__button--6, .numpad .numpad__button--7, .numpad .numpad__button--8, .numpad .numpad__button--9, .numpad .numpad__button--dot, .numpad .numpad__button--del {
   background-color: #626262;
@@ -57,10 +61,10 @@ main {
 
 .button-animation-1 {
   border: 0 solid white;
-  border-radius: 50px;
+  border-radius: 10vw;
   transition-duration: 200ms;
 }
 .button-animation-1:active {
-  border-radius: 5px;
-  transition-duration: 100ms;
+  border-radius: 2vw;
+  transition-duration: 200ms;
 }/*# sourceMappingURL=style.css.map */
