--- a/style.scss
+++ b/style.scss
@@ -8,45 +8,49 @@ $numpad-color-grey: #626262;
     margin: 0;
     padding: 0;
     color: white;
+    font-size: 5vw;
 }
 
 body {
-    height: 100vh;
-    width: 100vh;
+    max-height: 100vh;
+    max-width: 100vw;
     background-color: $bg-color;
 }
 
-main {
-    height: 100vh;
-    width: 100vh;
-}
+main {}
 
 .numpad-grid {
-    position: center;
-    width: 50px;
-    height: 50px;
+    position: absolute;
+    bottom: 0;
+    margin: 7vw;
+    justify-items: center; //!IMPORTANT centers the child elements in the grid
+    align-items: center; //!IMPORTANT centers the child elements in the grid
+    width: auto;
+    height: 45vh;
     display: grid;
+    gap: 2vw;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     grid-row: 1/6;
     grid-column: 1/5;
-    gap: 0.5rem;
     background-color: #272727;
 }
 
 .numpad {
     .numpad__button-brackets {
+        width: 20vw; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
+        height: 20vw; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
         >* {
-            width: 1rem;
-            height: 2.5rem;
+            width: 7vw;
+            height: 20vw;
             align-items: center;
-            margin: 0 0.05rem 0 0.05rem;
+            margin: 0 1vw 0 1vw;
             background-color: $numpad-color-blue-1;
         }
     }
     .numpad__button {
-        width: 2.5rem;
-        height: 2.5rem;
+        width: 20vw; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
+        height: 20vw; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
         &--0,
         &--1,
         &--2,
@@ -81,10 +85,10 @@ main {
 
 .button-animation-1 {
     border: 0 solid white;
-    border-radius: 50px;
+    border-radius: 10vw;
     transition-duration: 200ms;
     &:active {
-        border-radius: 5px;
-        transition-duration: 100ms;
+        border-radius: 2vw;
+        transition-duration: 200ms;
     }
 }
