--- a/style.css
+++ b/style.css
@@ -29,14 +29,14 @@ body {
 .screen--output {
   height: 10vh;
   width: 90vw;
-  font-size: 5vw;
+  font-size: 1.5rem;
   text-align: left;
-  color: #626262;
+  color: #cfcfcf;
 }
 .screen--input {
   height: 20vh;
   width: 90vw;
-  font-size: 15vw;
+  font-size: 2rem;
   text-align: right;
   color: white;
 }
