--- a/style.scss
+++ b/style.scss
@@ -57,14 +57,14 @@ body {
     &--output {
         height: 10vh;
         width: 90vw;
-        font-size: 5vw;
+        font-size: 1.5rem;
         text-align: left;
-        color: #626262;
+        color: #cfcfcf;
     }
     &--input {
         height: 20vh;
         width: 90vw;
-        font-size: 15vw;
+        font-size: 2rem;
         text-align: right;
         color: white;
     }
