--- a/style.css
+++ b/style.css
@@ -2,24 +2,31 @@
   margin: 0;
   padding: 0;
   color: white;
-  font-size: 5vw;
+  font-size: 1.3rem;
 }
 
 body {
-  max-height: 100vh;
-  max-width: 100vw;
   background-color: #272727;
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.calculator-body {
+  max-width: 375px;
+  max-height: 667px;
+  border: 5 solid white;
+  position: center;
 }
 
 .screen-display {
   background-color: #292929;
-  height: 30vh;
-  width: 90vw;
+  height: 150px;
+  width: 400px;
   margin: 1rem;
   border: 2 solid black;
   border-radius: 10px;
-  word-wrap: break-word;
-  white-space: initial;
 }
 
 .screen {
@@ -27,15 +34,15 @@ body {
   background-color: #292929;
 }
 .screen--output {
-  height: 10vh;
-  width: 90vw;
+  height: 50%;
+  width: 100%;
   font-size: 1.5rem;
   text-align: left;
   color: #cfcfcf;
 }
 .screen--input {
-  height: 20vh;
-  width: 90vw;
+  height: 70%;
+  width: 100%;
   font-size: 2rem;
   text-align: right;
   color: white;
@@ -46,7 +53,7 @@ body {
   align-items: center;
   width: auto;
   display: grid;
-  gap: 10vw;
+  gap: 0.5rem;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   grid-row: 1/2;
@@ -56,22 +63,22 @@ body {
 
 .special-buttons {
   border: 0 solid white;
-  border-radius: 10vw;
-  transition-duration: 200ms;
+  border-radius: 50px;
+  transition-duration: 150ms;
 }
 .special-buttons:active {
-  border-radius: 2vw;
-  transition-duration: 200ms;
+  border-radius: 15px;
+  transition-duration: 150ms;
 }
 .special-buttons--menu {
   background-color: #FFF6A7;
-  width: 15vw;
-  height: 7vw;
+  width: 2rem;
+  height: 1rem;
 }
 .special-buttons--pi, .special-buttons--root, .special-buttons--topower {
   background-color: #4A83C8;
-  width: 15vw;
-  height: 15vw;
+  width: 2rem;
+  height: 1rem;
 }
 
 .numpad-grid {
@@ -80,7 +87,7 @@ body {
   width: auto;
   height: auto;
   display: grid;
-  gap: 2vw;
+  gap: 0.5rem;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   grid-row: 1/6;
@@ -89,14 +96,14 @@ body {
 
 .numpad .numpad__button {
   border: 0 solid white;
-  border-radius: 10vw;
-  transition-duration: 200ms;
-  width: 20vw;
-  height: 20vw;
+  border-radius: 50px;
+  transition-duration: 150ms;
+  width: 70px;
+  height: 70px;
 }
 .numpad .numpad__button:active {
-  border-radius: 2vw;
-  transition-duration: 200ms;
+  border-radius: 15px;
+  transition-duration: 150ms;
 }
 .numpad .numpad__button--0, .numpad .numpad__button--1, .numpad .numpad__button--2, .numpad .numpad__button--3, .numpad .numpad__button--4, .numpad .numpad__button--5, .numpad .numpad__button--6, .numpad .numpad__button--7, .numpad .numpad__button--8, .numpad .numpad__button--9, .numpad .numpad__button--dot, .numpad .numpad__button--del {
   background-color: #626262;
