--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,10 @@
 @mixin button-animation-1 {
     border: 0 solid white;
-    border-radius: 10vw;
-    transition-duration: 200ms;
+    border-radius: 50px;
+    transition-duration: 150ms;
     &:active {
-        border-radius: 2vw;
-        transition-duration: 200ms;
+        border-radius: 15px;
+        transition-duration: 150ms;
     }
 }
 
@@ -20,13 +20,18 @@ $numpad-color-grey-2: #292929;
     margin: 0;
     padding: 0;
     color: white;
-    font-size: 5vw;
+    font-size: 1.3rem;
 }
 
 body {
-    max-height: 100vh;
-    max-width: 100vw;
+    // max-height: 100vh;
+    // max-width: 100vw;
     background-color: $bg-color;
+    display: flex;
+    justify-content: center;
+    // align-items: center;
+    width: 100vw;
+    height: 100vh;
 }
 
 // .calculator-body-grid {
@@ -40,30 +45,35 @@ body {
 //    grid-row: 1/4;
 //    grid-column: 1/2;
 //}
+.calculator-body {
+    max-width: 375px;
+    max-height: 667px;
+    border: 5 solid white;
+    position: center;
+}
+
 .screen-display {
     background-color: $numpad-color-grey-2;
-    height: 30vh;
-    width: 90vw;
+    height: 150px;
+    width: 400px;
     margin: 1rem;
     border: 2 solid black;
     border-radius: 10px;
-    word-wrap: break-word;
-    white-space: initial;
 }
 
 .screen {
     border: 0 solid white;
     background-color: $numpad-color-grey-2;
     &--output {
-        height: 10vh;
-        width: 90vw;
+        height: 50%;
+        width: 100%;
         font-size: 1.5rem;
         text-align: left;
         color: #cfcfcf;
     }
     &--input {
-        height: 20vh;
-        width: 90vw;
+        height: 70%;
+        width: 100%;
         font-size: 2rem;
         text-align: right;
         color: white;
@@ -75,7 +85,7 @@ body {
     align-items: center; //!IMPORTANT centers the child elements in the grid
     width: auto;
     display: grid;
-    gap: 10vw;
+    gap: 0.5rem;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     grid-row: 1/2;
@@ -87,15 +97,15 @@ body {
     @include button-animation-1;
     &--menu {
         background-color: $numpad-color-yellow;
-        width: 15vw; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
-        height: 7vw; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle   
+        width: 2rem; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
+        height: 1rem; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle   
     }
     &--pi,
     &--root,
     &--topower {
         background-color: $numpad-color-blue-1;
-        width: 15vw; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
-        height: 15vw; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
+        width: 2rem; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
+        height: 1rem; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
     }
 }
 
@@ -105,7 +115,7 @@ body {
     width: auto;
     height: auto;
     display: grid;
-    gap: 2vw;
+    gap: 0.5rem;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     grid-row: 1/6;
@@ -128,8 +138,8 @@ body {
     // }
     .numpad__button {
         @include button-animation-1;
-        width: 20vw; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
-        height: 20vw; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
+        width: 70px; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
+        height: 70px; //if 100% Makes the size the max size of the grid section. Change to a static size to keep it circle
         &--0,
         &--1,
         &--2,
