--- a/style.scss
+++ b/style.scss
@@ -55,10 +55,10 @@ body {
 .screen-display {
     background-color: $numpad-color-grey-2;
     height: 150px;
-    width: 400px;
-    margin: 1rem;
+    width: 300px;
     border: 2 solid black;
     border-radius: 10px;
+    margin: 2rem;
 }
 
 .screen {
@@ -77,6 +77,7 @@ body {
         font-size: 2rem;
         text-align: right;
         color: white;
+        margin-top: 1rem;
     }
 }
 
@@ -120,6 +121,7 @@ body {
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     grid-row: 1/6;
     grid-column: 1/5;
+    margin-top: 3rem
 }
 
 .numpad {
